--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>homework1</title>
+  <title>GoIt-Markup-HW-2</title>
+  <link rel="stylesheet" href="./styles.css">
 </head>
 
 <body>
   <header>
     <!-- navigation -->
     <nav>
-      <a href="./index.html">Web Studio </a>
+      <a href="./index.html" class="logo"></a>
+        <span class="logo-blue"> Web </span>
+          <span class="logo-black"> Studio </span>
+           </a>
 
-      <ul>
-        <li><a href=""> Студія </a></li>
-          <li><a href=""> Портфоліо </a></li>
-            <li><a href=""> Контакти </a></li>
+      <ul class="ul-link">
+        <li><a class="studio" href="index.html"> Студія </a></li>
+          <li><a class="portfolio" href="portfolio.html"> Портфоліо </a></li>
+            <li><a class="contacts" href=""> Контакти </a></li>
       </ul>
           <address>
             <ul>
