--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>GoIt-Markup-HW-2</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500&display=swap">
   <link rel="stylesheet" href="./styles.css">
 </head>
 
@@ -17,10 +18,10 @@
           <span class="logo-black"> Studio </span>
            </a>
 
-      <ul class="ul-link">
-        <li><a class="studio" href="index.html"> Студія </a></li>
-          <li><a class="portfolio" href="portfolio.html"> Портфоліо </a></li>
-            <li><a class="contacts" href=""> Контакти </a></li>
+      <ul class="site-nav">
+        <li><a class="link" href="index.html"> Студія </a></li>
+          <li><a class="link" href="portfolio.html"> Портфоліо </a></li>
+            <li><a class="link" href=""> Контакти </a></li>
       </ul>
           <address>
             <ul>
