--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
           <span class="logo-black"> Studio </span>
            </a>
 
-      <ul class="site-nav">
+      <ul class="ul-style site-nav">
         <li><a class="link current" href="index.html"> Студія </a></li>
           <li><a class="link" href="portfolio.html"> Портфоліо </a></li>
             <li><a class="link" href=""> Контакти </a></li>
       </ul>
           <address>
-            <ul class="address">
+            <ul class="ul-style address">
               <li><a href="mailto:info@devstudio.com"> 
                 info@devstudio.com</a></li>
               <li><a href="tel:+38096111111">
@@ -172,11 +172,11 @@
       </a>
           <!--Адреси  -->
      <address>
-         <ul class="address">
-            <li> м.Київ,<br /> пр-т Лесі Українки, 26</li>
-            <li><a href="mailto:info@example.com"> info@example.com</a></li>
-            <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
-          </ul>
+      <ul class=" ul-style address">
+        <li><span class="addres-street"> м.Київ,<br /> пр-т Лесі Українки, 26 </span> </li>
+        <li><a href="mailto:info@example.com"> info@example.com</a></li>
+        <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
+      </ul>
       </address>
        <!-- Долучись до нас в соцмережу -->
         <p class="join">Приєднюйтесь</p>
