--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,13 @@
       <span class="logo-black"> Studio </span>
       </a>
 
-      <ul class="site-nav">
+      <ul class="ul-style site-nav">
         <li><a class="link " href="index.html"> Студія </a></li>
         <li><a class="link current" href="portfolio.html"> Портфоліо </a></li>
         <li><a class="link" href=""> Контакти </a></li>
       </ul>
       <address>
-        <ul class="address">
+        <ul class="ul-style address">
           <li><a href="mailto:info@devstudio.com">
               info@devstudio.com</a></li>
           <li><a href="tel:+38096111111">
@@ -101,8 +101,8 @@
               </a>
             <!--Адреси  -->
             <address>
-              <ul class="address">
-                <li> м.Київ,<br /> пр-т Лесі Українки, 26</li>
+              <ul class=" ul-style address">
+                <li><span class="addres-street"> м.Київ,<br /> пр-т Лесі Українки, 26 </span> </li>
                 <li><a href="mailto:info@example.com"> info@example.com</a></li>
                 <li><a href="tel:+38096111111">+38 096 111 11 11</a></li>
               </ul>
