--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
   <header>
     <!-- navigation -->
     <nav>
-      <a href="./index.html" class="logo"></a>
-        <span class="logo-blue"> Web </span>
+      <a href="./index.html" class="logo">
+        Web 
           <span class="logo-black"> Studio </span>
            </a>
 
@@ -91,7 +91,7 @@
         </ul>
   </section>
           <!-- Our teams -->
-  <section class="section" lang="en">
+  <section class="our-team" lang="en">
     <h2 class="section-title"> Our teams </h2>
           
         <a href=""><img src="./Images/prodactdesigner.jpg" alt="prodactdesigner" width="270" height="260" /></a>
@@ -140,18 +140,18 @@
           <!-- Постійні клієнти -->
   <section class="section">
     <h2 class="section-title">Постійні клієнти</h2>
-      <ul class="ul-style">
-        <li>
-          <a href="" ><img src="./Images/logo1.svg" class="regular-custumers" alt="logo" /></a>
+      <ul class="ul-style" >
+        <li >
+          <a href="" class="for-hover"><img src="./Images/logo1.svg" alt="logo" /></a>
         </li>
           <li>
-          <a href="" class="regular-custumers"><img src="./Images/logo2.svg" alt="logo" /></a>
+          <a href="" ><img src="./Images/logo2.svg" alt="logo" class="for-hover"/></a>
           </li>
             <li >
               <a href=""><img src="./Images/logo3.svg" alt="logo" /></a>
             </li>
               <li>
-                <a href=""class="icons"><img src="./Images/logo4.svg" alt="logo" /></a>
+                <a href=""><img src="./Images/logo4.svg" alt="logo" /></a>
               </li>
                 <li>
                   <a href=""><img src="./Images/logo5.svg" alt="logo" /></a>
@@ -166,10 +166,10 @@
           <!-- Підвал -->
    <footer>
      <!-- logo -->
-      <a href="./index.html" class="logo"></a>
-      <span class="logo-blue"> Web </span>
-      <span class="logo-black"> Studio </span>
-      </a>
+      <a href="./index.html" class="logo">
+        Web
+        <span class="logo-black"> Studio </span>
+         </a>
           <!--Адреси  -->
      <address>
       <ul class=" ul-style address">
