--- a/index.html
+++ b/index.html
@@ -142,22 +142,22 @@
     <h2 class="section-title">Постійні клієнти</h2>
       <ul class="ul-style" >
         <li >
-          <a href="" class="for-hover"><img src="./Images/logo1.svg" alt="logo" /></a>
+          <a href="" class="regular-custumers"><img src="./Images/logo1.svg" alt="logo" /></a>
         </li>
           <li>
-          <a href="" ><img src="./Images/logo2.svg" alt="logo" class="for-hover"/></a>
+          <a href="" class="regular-custumers"><img src="./Images/logo2.svg" alt="logo" class="for-hover"/></a>
           </li>
             <li >
-              <a href=""><img src="./Images/logo3.svg" alt="logo" /></a>
+              <a href="" class="regular-custumers"><img src="./Images/logo3.svg" alt="logo" /></a>
             </li>
               <li>
-                <a href=""><img src="./Images/logo4.svg" alt="logo" /></a>
+                <a href="" class="regular-custumers"><img src="./Images/logo4.svg" alt="logo" /></a>
               </li>
                 <li>
-                  <a href=""><img src="./Images/logo5.svg" alt="logo" /></a>
+                  <a href="" class="regular-custumers"><img src="./Images/logo5.svg" alt="logo" /></a>
                 </li>
                   <li>
-                    <a href><img src="./Images/logo6.svg" alt="logo" /></a>
+                    <a href="" class="regular-custumers"><img src="./Images/logo6.svg" alt="logo" /></a>
                   </li>
       </ul>
   </section>
