--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="./index.html" class="logo">
         Web 
-          <span class="logo-black"> Studio </span>
+          <span> Studio </span>
            </a>
 
       <ul class="ul-style site-nav">
@@ -166,10 +166,11 @@
           <!-- Підвал -->
    <footer>
      <!-- logo -->
-      <a href="./index.html" class="logo">
-        Web
-        <span class="logo-black"> Studio </span>
-         </a>
+        <a href="./index.html" class="logo">
+          Web
+          <span> Studio </span>
+           </a>
+
           <!--Адреси  -->
      <address>
       <ul class=" ul-style address">
