--- a/portfolio.html
+++ b/portfolio.html
@@ -14,10 +14,11 @@
   <header>
     <!-- navigation -->
     <nav>
-    <a href="./index.html" class="logo">
-      Web
-      <span class="logo-black"> Studio </span>
-        </a>
+      <a href="./index.html" class="logo">
+        Web
+        <span> Studio </span>
+         </a>
+
 
       <ul class="ul-style site-nav">
         <li><a class="link " href="index.html"> Студія </a></li>
@@ -95,10 +96,11 @@
           <!-- Підвал -->
           <footer>
             <!-- logo -->
-              <a href="./index.html" class="logo">
-                Web
-                <span class="logo-black"> Studio </span>
-                  </a>
+                <a href="./index.html" class="logo">
+                  Web
+                  <span> Studio </span>
+                   </a>
+
             <!--Адреси  -->
             <address>
               <ul class=" ul-style address">
