--- a/portfolio.html
+++ b/portfolio.html
@@ -40,11 +40,11 @@
 <h1>Портфоліо</h1>
 <section>
   <ul class="ul-style">
-    <li><a href="" class="button-radio">Усе</a></li>
-    <li><a href="" class="button-radio">Веб-сайти</a></li>
-    <li><a href="" class="button-radio">Аплікації</a></li>
-    <li><a href="" class="button-radio">Дизайн</a></li>
-    <li><a href="" class="button-radio">Маркетинг</a></li>
+    <li><button href="" class="button-radio">Усе</button></li>
+    <li><button href="" class="button-radio">Веб-сайти</button></li>
+    <li><button href="" class="button-radio">Аплікації</button></li>
+    <li><button href="" class="button-radio">Дизайн</button></li>
+    <li><button href="" class="button-radio">Маркетинг</button></li>
   </ul>
 </section>
 
